--- a/index.html
+++ b/index.html
@@ -58,30 +58,30 @@
 						</li>
 						<li><a href="https://www.youtube.com/" class="link-3" target="_blank"
 								rel="nofollow">油管</a></li>
-						<li><a href="http://www.cankaoxiaoxi.com/" class="link-3" target="_blank" rel="nofollow">参考消息</a>
+						<li><a href="https://www.cankaoxiaoxi.com/" class="link-3" target="_blank" rel="nofollow">参考消息</a>
 						</li>				
 						<li><a href="https://www.icourse163.org/" class="link-3" target="_blank" rel="nofollow">MOOC</a>
 						</li>
 					</ul>
 				</div>
 				<div class="jj-list">
-					<div class="jj-list-tit">社区论坛</div>
+					<div class="jj-list-tit">本地网址</div>
 					<ul class="jj-list-con">
-						<li><a href="https://gitee.com/" class="link-3" target="_blank" rel="nofollow">Gitee</a></li>
-						<li><a href="https://chat.theb.ai" class="link-3" target="_blank" rel="nofollow">BAI CHAT</a></li>
-						<li><a href="https://chatforai.com/" class="link-3" target="_blank" rel="nofollow">Chat AI</a></li>
-						<li><a href="https://www.chat2ai.cn/" class="link-3" target="_blank" rel="nofollow">CHAT2AI</a></li>
-						<li><a href="https://chatgpt.ai/" class="link-3" target="_blank" rel="nofollow">CHATGPT.AI</a>
+						<li><a href="http://192.168.3.101/#/" class="link-3" target="_blank" rel="nofollow">CASAOS</a></li>
+						<li><a href="http://192.168.3.101:5244/" class="link-3" target="_blank" rel="nofollow">ALIST</a></li>
+						<li><a href="http://192.168.3.106/" class="link-3" target="_blank" rel="nofollow">OPENWRT</a></li>
+						<li><a href="http://192.168.3.101:5678/" class="link-3" target="_blank" rel="nofollow">XIAOYA</a></li>
+						<li><a href="http://192.168.3.101:6880/" class="link-3" target="_blank" rel="nofollow">ARIA2</a>
 						</li>
 						<li><a href="https://www.cursor.so/" class="link-3" target="_blank"
 								rel="nofollow">cursor</a></li>
 						<li><a href="https://github.com/" class="link-3" target="_blank" rel="nofollow">GitHub</a></li>
+						<li><a href="https://gitee.com/" class="link-3" target="_blank" rel="nofollow">GITEE</a></li>
 						<li><a href="https://www.douban.com/" class="link-3" target="_blank" rel="nofollow">豆瓣</a></li>
-						<li><a href="https://www.v2ex.com/" class="link-3" target="_blank" rel="nofollow">V2EX</a></li>
 					</ul>
 				</div>
 				<div class="jj-list">
-					<div class="jj-list-tit">体育娱乐</div>
+					<div class="jj-list-tit">休闲娱乐</div>
 					<ul class="jj-list-con">
 						<li><a href="https://tansuo.tv/" class="link-3" target="_blank" rel="nofollow">探索TV</a></li>
 						<li><a href="https://www.zhibo8.cc/" class="link-3" target="_blank" rel="nofollow">直播吧</a></li>
@@ -106,8 +106,8 @@
 								rel="nofollow">干部学习</a></li>
 						<li><a href="https://www.jd.com/" class="link-3" target="_blank" rel="nofollow">京东</a></li>
 						<li><a href="https://www.taobao.com/" class="link-3" target="_blank" rel="nofollow">淘宝</a></li>
-						<li><a href="http://218.60.147.208/" class="link-3" target="_blank" rel="nofollow">对外劳务</a></li>
-						<li><a href="https://ecomp.mofcom.gov.cn/loginCorp.html" class="link-3" target="_blank" rel="nofollow">对外投资</a></li>
+						<li><a href="http://218.60.147.208/" class="link-3" target="_blank" rel="nofollow">辽宁劳务</a></li>
+						<li><a href="https://ecomp.mofcom.gov.cn/loginCorp.html" class="link-3" target="_blank" rel="nofollow">统一平台</a></li>
 						<li><a href="http://172.30.64.3:8080/" class="link-3" target="_blank" rel="nofollow">云上铁岭</a>
 						</li>
 						<li><a href="https://yiyan.baidu.com/" class="link-3" target="_blank" rel="nofollow">文心一言</a></li>
@@ -139,13 +139,13 @@
 				<div class="jj-list">
 					<div class="jj-list-tit">搜索资源</div>
 					<ul class="jj-list-con">
-						<li><a href="https://pan666.cn/" class="link-3" target="_blank" rel="nofollow">阿里小站</a></li>
-						<li><a href="https://www.chaonengso.com/" class="link-3" target="_blank" rel="nofollow">超能搜</a></li>
-						<li><a href="https://www.coolist.net/" class="link-3" target="_blank" rel="nofollow">酷软清单</a>
+						<li><a href="https://kkapi.eu.org/" class="link-3" target="_blank" rel="nofollow">海绵小站</a></li>
+						<li><a href="https://www.leijing.xyz/" class="link-3" target="_blank" rel="nofollow">雷鲸小站</a></li>
+						<li><a href="https://www.tianyiso.com/" class="link-3" target="_blank" rel="nofollow">天逸搜</a>
 						</li>
-						<li><a href="https://singlelogin.me/" class="link-3" target="_blank" rel="nofollow">Z-library</a></li>
-						<li><a href="https://zhengbanxianmian.com/" class="link-3" target="_blank"
-								rel="nofollow">软件限免</a></li>
+						<li><a href="https://www.91panta.com/" class="link-3" target="_blank" rel="nofollow">盘他COM</a></li>
+						<li><a href="https://www.91panta.cn/" class="link-3" target="_blank"
+								rel="nofollow">盘他CN</a></li>
 						<li><a href="https://www.soukuzhan.com/" class="link-3" target="_blank"
 								rel="nofollow">搜酷站</a></li>
 						<li><a href="https://www.jiumodiary.com/" class="link-3" target="_blank" rel="nofollow">电子书</a>
