--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 						<li><a href="https://mail.10086.cn/" class="link-3" target="_blank" rel="nofollow">139邮箱</a>
 						</li>
 						<li><a href="https://dict.hujiang.com/" class="link-3" target="_blank" rel="nofollow">小D词典</a></li>
-						<li><a href="https://www.chaonengso.com/" class="link-3" target="_blank"
-								rel="nofollow">超能搜</a></li>
+						<li><a href="https://tapbpmhub.com/zh/online-metronome" class="link-3" target="_blank"
+								rel="nofollow">节拍器</a></li>
 						<li><a href="https://www.ctrip.com/" class="link-3" target="_blank"
 								rel="nofollow">携程</a></li>
 						<li><a href="https://www.12306.cn/index/" class="link-3" target="_blank" rel="nofollow">12306</a>
